--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  # sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=2.17.1 <3.0.0'
 
 
 dependencies:
@@ -24,33 +25,33 @@ dependencies:
   path_provider: ^2.0.11
   bloc: ^8.1.0
   mailer: ^6.0.0
-  cached_network_image: ^3.2.2
+  cached_network_image: ^3.2.1
   http: ^0.13.3
-  flutter_web_browser: ^0.15.0
-  scrollable_positioned_list: ^0.1.7
+  flutter_web_browser: ^0.17.1
+  scrollable_positioned_list: ^0.3.8
   html: ^0.15.0
   url_launcher: ^6.0.3
-  dio: ^4.0.6
+  dio: ^5.3.3
   intl: ^0.17.0
-  percent_indicator: ^3.0.1
+  percent_indicator: ^4.2.3
   timelines: ^0.1.0
-  dots_indicator: ^2.0.0
-  flutter_credit_card: ^2.0.0
-  intl_phone_field: ^2.0.0
+  dots_indicator: ^3.0.0
+  flutter_credit_card: ^3.0.7
+  intl_phone_field: ^3.2.0
   email_validator: ^2.0.1
   mobx: ^2.0.1
   numeric_keyboard: ^1.1.0
   bottom_navigation_badge: ^1.0.3
   clippy_flutter: ^1.1.1
-  flutter_staggered_grid_view: ^0.4.0
+  flutter_staggered_grid_view: ^0.6.2
   video_player: ^2.1.10
   algolia: ^1.0.1
   image_picker: ^0.8.2
-  file_picker: ^3.0.3
-  fl_chart: ^0.36.3
+  file_picker: ^5.2.10
+  fl_chart: ^0.62.0
   persistent_bottom_nav_bar: any
   chewie: ^1.2.2
-  local_auth: ^1.1.6
+  local_auth: ^2.1.6
   expandable: ^5.0.1
   device_info: ^2.0.2
   encrypt: ^5.0.1
@@ -59,10 +60,10 @@ dependencies:
       git:
         url: https://github.com/google/charts.git
         path: charts_flutter
-  google_fonts: ^2.1.0
-  flutter_svg: ^0.22.0
-  flutter_local_notifications: ^9.0.1
-  flutter_tawk: ^0.0.5
+  google_fonts: ^4.0.4
+  flutter_svg: ^1.1.6
+  flutter_local_notifications: ^16.1.0
+  flutter_tawk: ^0.1.0
   get: ^4.6.5
   store_redirect: ^2.0.1
   rating_dialog: ^2.0.4
